--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
   border: none;
   cursor: pointer;
  
+animation-name: btn1;
+animation-duration: 2s;
+animation-direction: alternate;
+animation-iteration-count: infinite;
+animation-timing-function: linear;
+}
+@keyframes btn1 {
+    from {
+      background-color: #ff0202;
+      width: 300px;
+      top: 10px;
+    }
+    to {
+      background-color: #33475b;
+      width: 80px;
+      top: 100px;
+    }
 }
 
 .heart {
